--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,11 @@
 pull.sh
 payload.php
 
-# Useless
-userpage/
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
