--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 # Check for mime types commonly accepted by mobile devices
 RewriteCond %{HTTP_ACCEPT} "text\/vnd\.wap\.wml|application\/vnd\.wap\.xhtml\+xml" [NC]
 RewriteCond %{REQUEST_URI} ^/$
-RewriteRule ^ https://jetspace.co%{REQUEST_URI} [R,L]
+RewriteRule ^ http://maintenance.jetspace.co%{REQUEST_URI} [R,L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
